# jfpx

./: addhead.sh
src/: CMakeLists.txt
src/jfCamera/: jfCamera.cpp  jfCamera.h  jfFPSCamera.cpp  jfFPSCamera.h
src/jfEvent/: jfEvent.cpp  jfEvent.h  jfEventHandler.cpp  jfEventHandler.h
src/jfGraphics/jf3DGraphics/: jf3DGraphicsHandler.cpp  jf3DGraphicsHandler.h
src/jfGraphics/jfWindowManager/: jfWindowManager.h
src/jfLog/: jfLog.cpp  jfLog.h
src/jfShape/: jfBall.cpp  jfBall.h  jfBox.cpp  jfBox.h  jfShape.cpp  jfShape.h  jfShapeFactory.cpp  jfShapeFactory.h
src/jfShape/x86/: jfBall_x86.cpp  jfBall_x86.h  jfBox_x86.cpp  jfBox_x86.h  jfShapeFactory_x86.cpp  jfShapeFactory_x86.h
src/jfSimulation/: jfSimulation.cpp  jfSimulation.h
src/jfTimer/: jfPerformanceTimer.cpp  jfPerformanceTimer.h  jfTimer.cpp  jfTimer.h
src/jfpx/: jfAeroControlForceGenerator.cpp  jfAeroControlForceGenerator.h  jfAeroForceGenerator.cpp  jfAeroForceGenerator.h  jfBVHNode.cpp  jfBVHNode.h  jfBoundingSphere.cpp  jfBoundingSphere.h  jfBoundingVolume.cpp  jfBoundingVolume.h  jfCollisionBox.cpp  jfCollisionBox.h  jfCollisionData.cpp  jfCollisionData.h  jfCollisionDetector.cpp  jfCollisionDetector.h  jfCollisionPlane.cpp  jfCollisionPlane.h  jfCollisionPrimitive.cpp  jfCollisionPrimitive.h  jfCollisionSphere.cpp  jfCollisionSphere.h  jfConstants.h  jfContact.cpp  jfContact.h  jfContactGenerator.h  jfContactResolver.cpp  jfContactResolver.h  jfConversion.h  jfCore.h  jfFactory.cpp  jfFactory.h  jfForceGenerator.cpp  jfForceGenerator.h  jfForceRegistry.cpp  jfForceRegistry.h  jfGravityForceGenerator.cpp  jfGravityForceGenerator.h  jfIntersectionTester.cpp  jfIntersectionTester.h  (+17 more)
src/jfpx/cuda/: jfCollisionDetectorKernel_cuda.cu  jfCollisionDetector_cuda.cpp  jfCollisionDetector_cuda.h  jfCollisionSphere_cuda.cpp  jfCollisionSphere_cuda.h  jfContact_cuda.cpp  jfContact_cuda.h  jfCudaConstants.h  jfCudaConstants.h~  jfFactory_cuda.cpp  jfFactory_cuda.h  jfVector3_cuda.cpp  jfVector3_cuda.h
src/jfpx/x86/: jfAeroControlForceGenerator_x86.cpp  jfAeroControlForceGenerator_x86.h  jfAeroForceGenerator_x86.cpp  jfAeroForceGenerator_x86.h  jfBVHNode_x86.cpp  jfBVHNode_x86.h  jfBoundingSphere_x86.cpp  jfBoundingSphere_x86.h  jfCollisionBox_x86.cpp  jfCollisionBox_x86.h  jfCollisionDetector_x86.cpp  jfCollisionDetector_x86.h  jfCollisionPlane_x86.cpp  jfCollisionPlane_x86.h  jfCollisionPrimitive_x86.cpp  jfCollisionPrimitive_x86.h  jfCollisionSphere_x86.cpp  jfCollisionSphere_x86.h  jfContactResolver_x86.cpp  jfContactResolver_x86.h  jfContact_x86.cpp  jfContact_x86.h  jfFactory_x86.cpp  jfFactory_x86.h  jfForceRegistry_x86.cpp  jfForceRegistry_x86.h  jfGravityForceGenerator_x86.cpp  jfGravityForceGenerator_x86.h  (+20 more)
(+220 files in other folders)
